# rk3588_ai_gateway

./: CMakeLists.txt  PROJECT_GUIDE.md  README.md  RK3588_RTSP_MPP_Debug_Record.md  rga.txt
build_fix/: CMakeCache.txt  Makefile  RK3588_AI_Gateway  cmake_install.cmake
include/: ThreadSafeQueue.h  app_context.h  app_lifecycle.h  app_model.h  app_runtime.h  app_thread_utils.h  common.h  inference_thread.h  puller_thread.h  rga_resize.h  rga_yuv_converter.h  rknn_detector.h  rtsp_mpp_decoder.h  stitcher.h  streamer_thread.h  time_manager.h
mediamtx_server/: mediamtx.yml  patch_main.py
note/: GSTREAMER_DEEP_DIVE.md  MPP_DECODE_ENCODE_RESOURCE_ALLOCATION.md  MPP_HARDWARE_ENCODING_DETAILED.md  PROJECT_ARCHITECTURE_DETAILED.md  RGA_4G_RGA2_RGA3_复盘记录.md  RGA_OPTIMIZATION_SUMMARY.md  RGA_YUV_CONVERSION_OPTIMIZATION.md  RK3588_NPU_DEBUG_REPORT.md  RK3588_Optimization_Record.md  VIDEO_OUTPUT_PARAMETERS.md  YOLOV8_MECHANISM_EXPLAINED.md
repro_rga_dma32_demo/: CMakeLists.txt  dma_alloc.cpp  rga_allocator_dma32_demo.cpp
repro_rga_dma32_demo/images/: README.md
repro_rga_dma32_demo/include/: dma_alloc.h  rknn_detector.h  utils.h
src/: app_context.cpp  app_lifecycle.cpp  app_model.cpp  app_runtime.cpp  app_thread_utils.cpp  inference_thread.cpp  main.cpp  puller_thread.cpp  rga_resize.cpp  rga_yuv_converter.cpp  rknn_detector.cpp  rtsp_mpp_decoder.cpp  stitcher.cpp  streamer_thread.cpp  time_manager.cpp
